--- a/index.css
+++ b/index.css
@@ -119,7 +119,6 @@ img {
     margin-bottom: 20px;
 }
 
-/*
 .collapsible {
     cursor: pointer;
     background-color: #f1f1f1;
@@ -138,7 +137,7 @@ img {
     content: ' ▼';
 }
 
-...for the content that is initially hidden
+/*for the content that is initially hidden*/
 .content { 
     font-family: "Monteserrat", serif;
     display: none;
@@ -147,7 +146,7 @@ img {
     background-color: #f9f9f9;
     border-radius: 5px;
 }
-...come back to make it interactive with JS*/
+/*come back to make it interactive with JS*/
 
 .collapsible.active:after {
     content: ' ▲';
